<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Herald!</string>
    <string name="action_settings">Settings</string>
    <string name="phone_hint">Recipient\'s Number</string>
    <string name="contacts_string">Contacts</string>
    <string name="address_hint">Destination Address</string>
    <string name="update_interval">Choose Update Interval (HH:MM)</string>
    <string name="start_route">Start Route</string>
    <string name="stop_route">Pause Route</string>
    
    <string-array name="interval_array">
        <item>00:30</item>
        <item>00:45</item>
        <item>01:00</item>
        <item>01:15</item>
        <item>01:30</item>
        <item>01:45</item>
        <item>02:00</item>
        <item>02:15</item>
        <item>02:30</item>
        <item>02:45</item>
        <item>03:00</item>
        <item>03:15</item>
        <item>03:30</item>
        <item>03:45</item>
        <item>04:00</item>
    </string-array>
    <string name="maps_string">Find Address in Maps</string>
    <string name="app_map">Map</string>

</resources>