<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        
        <EditText 
        	android:id="@+id/recipient_number"
        	android:layout_width="185dp"
        	android:layout_height="wrap_content"
        	android:hint="@string/phone_hint"
        	android:inputType="phone"/>
        
        <Button
            android:id="@+id/contacts_btn"
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/contacts_string"></Button>
            
            
    </LinearLayout>


    <EditText 
        android:id="@+id/destination_address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/address_hint"
        android:inputType="textPostalAddress"/>
    
        <Button
            android:id="@+id/map_btn"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:text="@string/maps_string"></Button>
            
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="124dp"
        android:orientation="horizontal" >
        
         <TextView
        	android:id="@+id/spinner_prompt"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/update_interval"/>
    
    	<Spinner
        	android:id="@+id/interval_spinner"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
       	 	android:entries="@array/interval_array"
        	android:prompt="@string/update_interval"/>
    	
    	
    </LinearLayout>
   
    
    <Button 
        android:id="@+id/start_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start_route"/>
    
    

</LinearLayout>